2004-11-14  Mark Wielaard  <mark@klomp.org>

	libraries/clib/nio/FileChannelImpl.c
	(Java_gnu_java_nio_channels_FileChannelImpl_lock):
	Throw IOException.
	(Java_gnu_java_nio_channels_FileChannelImpl_unlock):
	Likewise.

2004-11-14  Dalibor Topic  <robilad@kaffe.org>

	* test/regression/ProhibitedClass.java:
	Fixed line numbers in expected output.

2004-11-13  Mark Wielaard  <mark@klomp.org>

        * libraries/javalib/java/lang/ClassLoader.java
        (defineClass(String,byte[],int,int)): Move
        defaultProtectionDomain initialization to...
        (defineClass(String,byte[],int,int,ProtectionDomain)): ...here.

2004-11-13  Mark Wielaard  <mark@klomp.org>

        * include/errors.h
        (ArrayStoreException): Define to take a message.
        * kaffe/kaffevm/soft.c
        (soft_checkarraystore): Add message to ArrayStoreException.
        * libraries/clib/native/System.c
        (java_lang_System_arraycopy): Likewise.

2004-11-13  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/plaf/basic/BasicTextUI.java,
	libraries/javalib/javax/swing/text/GapContent.java,
	libraries/javalib/javax/swing/text/PlainDocument.java,
	libraries/javalib/javax/swing/text/Utilities.java:
	Resynced with GNU Classpath.

	2004-11-11  Graydon Hoare  <graydon@redhat.com>

        * javax/swing/plaf/basic/BasicTextUI.java:
        Listen to focus events, indicate focus via caret.
        * javax/swing/text/GapContent.java (getString): Return substring.
        * javax/swing/text/PlainDocument.java (reindex): New method.
        (createDefaultRoot): Call it.
        (insertUpdate): Likewise.
        (removeUpdate): Likewise.
        * javax/swing/text/Utilities.java (drawTabbedText): Always advance
        on tab and newline, even if no painting happens.

2004-11-13  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/awt/classpath-gtk/gtk-peer/gnu_java_awt_peer_gtk_GdkFontPeer.c:
	Resynced with GNU Classpath.
