@@ -1244,6 +1244,15 @@ AM_ICONV
 # at least.
 AC_CHECK_FUNCS([sched_get_priority_max])
 AC_CHECK_FUNCS([sched_get_priority_min])
+AC_EGREP_HEADER(Found_SCHED_OTHER,
+  [
+#include <sched.h>
+#ifdef SCHED_OTHER
+Found_SCHED_OTHER
+#endif
+  ],
+  [ AC_DEFINE(HAVE_SCHED_OTHER_IN_SCHED, 1, [Defined if SCHED_OTHER is in sched.h])
+])
 
 dnl pthread_attr_setschedpolicy in not implemented on NetBSD <= 1.6
 dnl pthread_yield is not implemented on any systems.
